--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: project_buddy_mobile
-description: A new Flutter project.
+description: Project Buddy Mobile.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -34,7 +34,7 @@ dependencies:
   flutter_easyloading: any
   bot_toast: any
   universal_html: any
-  achievement_view: any
+  flutter_styled_toast: ^2.0.0
   hive: any
   hive_flutter: any
   image_picker: any
@@ -43,6 +43,8 @@ dependencies:
   get_it: any
   url_strategy: any
   wakelock: any
+  google_fonts: any
+  email_validator: any
 
 dev_dependencies:
   flutter_test:
